@@ -453,11 +453,11 @@
 47971479203517856656769812503986176
 2
 2
-[1, 1/4747561509943*x + 1/4747561509943], -2100
 [1, 1/23737807549715*x + 1/23737807549715], -84
 [1, 1/23737807549715*x + 1/23737807549715], -84
 [1, 1/23737807549715*x + 1/23737807549715], -84
-[1, x], -47332614610453741984512822900
+[1, 1/23737807549715*x + 1/23737807549715], -84
+[1, 1/23737807549715*x + 1/23737807549715], -84
 1600000000000000000000000000000000000000000000000000000000000000000000000000
 0000000000000000000000854400000000000000002528000000000000000000000000000000
 0000000000000000000000000000000000000000000114062400000000000001349952000000
@@ -467,4 +467,4 @@
 551496736222216254722000000000000000000
 827291662110720806941937696976
 827291662110720806941937696976
-Total time spent: 2611
+Total time spent: 2576
